# wyoming-azure-keyword

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  stream_sox.py
.github/workflows/: docker-publish.yml  lint.yml  release-please.yml
script/: run  setup
tests/: conftest.py  manual_test.py  manual_test_subprocess.py  test_keyword_detection.py
wyoming_azure_keyword/: __init__.py  __main__.py  azure_speech_keyword.py  debug.py  handler.py  worker.py
