[project]
name = "wyoming-azure-keyword"
version = "1.2.0"
description = "Wyoming wake word detection using Azure Speech SDK"
authors = [{ name = "James Cohen", email = "github@jamescohen.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "wyoming>=1.8.0,<2.0.0",
    "azure-cognitiveservices-speech>=1.49.1,<2.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
]

[dependency-groups]
dev = ["ruff>=0.15.2", "setuptools>=82.0.1", "pytest>=8.4.2"]

[tool.ruff]
line-length = 120
exclude = ["tests", "venv", ".venv"]
